# mcp-dashboard

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  demo.tape
.github/workflows/: ci.yml  release.yml
bench/: mcp_latency.rs
src/: app.rs  chat.rs  chat_config.rs  chat_provider.rs  checker.rs  config.rs  connection.rs  inspector.rs  main.rs  tokens.rs  ui.rs
src/ui/: chat.rs  common.rs  dashboard.rs  inspector.rs  mod.rs  protocol.rs  server_logs.rs
