[package]
name = "mcp-dashboard"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "A full-featured TUI dashboard for managing and monitoring MCP (Model Context Protocol) servers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nickslamecode/mcp-dashboard"
readme = "README.md"
keywords = ["mcp", "dashboard", "tui", "devtools", "monitoring"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "1", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "6"
